--- a/style.css
+++ b/style.css
@@ -1,14 +1,39 @@
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+li {
+  float: left;
+}
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+}
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
 li{
 	list-style: none;
 	display: inline-block;
 	font-size: 2em;
 }
-ul {
-	text-align: left;
-}
 body {
 	background-image: url(https://images.unsplash.com/photo-1519750783826-e2420f4d687f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80);
-	background-size: cover; 
+	background-size: cover;
 }
 footer{
 	clear: both;
@@ -20,4 +45,28 @@ h6{
 	max-width: 300px;
   	border: 3px solid red;
   	margin: 20px;
+	padding:  0px 50px;
+}
+video {
+	padding: 0px 50px 50px 50px;
+}
+img {
+	padding:  0px 50px;
+}
+h1 {
+	padding:  0px 50px;
+	font-size: 2em;
+	color: black;
+}
+p {
+	padding:  0px 50px;
+}
+footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: purple;
+   color: white;
+   text-align: center;
 }
